Add a warning when the user exit the app

--- a/translations/en.ini
+++ b/translations/en.ini
@@ -19,4 +19,6 @@ error_no_audio_devices = No audio devices found.
 error_invalid_area = Invalid area selected. Please select a valid area.
 error_adjusted_area = Adjusted width or height is zero. Please select a valid area.
 error_start_recording = Failed to start recording: {error}
+warning_quit = Recording in progress. Do you want to stop recording and exit?
+warning = Warning
 version_info = Version 1.0.4\n\nMini Screen Recorder is an open-source\nscreen and audio recorder for Windows and Linux.\n\nOriginal author: Lextrack.\n\nYou can find this project on GitHub, its name\nis 'MiniScreenRecorder', and my nickname\nis 'Lextrack'. Keep an eye on this project, more\nare updates coming soon!\n\nThis software is made possible by\nFFmpeg and Flaticon.
