--- a/translations/it.ini
+++ b/translations/it.ini
@@ -19,4 +19,6 @@ error_no_audio_devices = Nessun dispositivo audio trovato.
 error_invalid_area = Area selezionata non valida. Si prega di selezionare un'area valida.
 error_adjusted_area = La larghezza o l'altezza regolata è pari a zero. Si prega di selezionare un'area valida.
 error_start_recording = Impossibile avviare la registrazione: {error}
+warning_quit = Registrazione in corso. Si desidera interrompere la registrazione e uscire?
+warning = Avvertenze
 version_info = Versione 1.0.4\n\nMini Screen Recorder è un registratore\ndi schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome\nè 'MiniScreenRecorder', e il mio nickname\nè 'Lextrack'. Tieni d'occhio questo progetto, ci\nsono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da\nFFmpeg e Flaticon.
