--- a/translations/es.ini
+++ b/translations/es.ini
@@ -19,4 +19,6 @@ error_no_audio_devices = No se encontraron dispositivos de audio.
 error_invalid_area = Área seleccionada no válida. Seleccione un área válida.
 error_adjusted_area = El ancho o la altura ajustados es cero. Seleccione un área válida.
 error_start_recording = Error al comenzar la grabación: {error}
+warning_quit = Grabación en curso. ¿Desea detener la grabación y salir?
+warning = Advertencia
 version_info = Versión 1.0.4\n\nMini Screen Recorder es un grabador de pantalla\ny audio de código abierto para Windows y Linux.\n\nAutor original: Lextrack.\n\nPuedes encontrar este proyecto en GitHub, su nombre\nes 'MiniScreenRecorder', y mi apodo\nes 'Lextrack'. ¡Mantente atento a este proyecto,\nse avecinan más actualizaciones!\n\nEste software es posible gracias a\nFFmpeg y Flaticon.
