--- a/translations/fr.ini
+++ b/translations/fr.ini
@@ -19,4 +19,6 @@ error_no_audio_devices = Aucun périphérique audio trouvé.
 error_invalid_area = Zone sélectionnée invalide. Veuillez sélectionner une zone valide.
 error_adjusted_area = La largeur ou la hauteur ajustée est de zéro. Veuillez sélectionner une zone valide.
 error_start_recording = Échec du démarrage de l'enregistrement : {error}
+warning_quit = Enregistrement en cours. Voulez-vous arrêter l'enregistrement et quitter?
+warning = Avertissement
 version_info = Version 1.0.4\n\nMini Screen Recorder est un enregistreur\nd'écran et audio open-source pour Windows et Linux.\n\nAuteur original : Lextrack.\n\nVous pouvez trouver ce projet sur GitHub, son nom\nest 'MiniScreenRecorder', et mon pseudonyme\nest 'Lextrack'. Suivez ce projet, plus\nde mises à jour arrivent bientôt !\n\nCe logiciel est rendu possible par\nFFmpeg et Flaticon.
