--- a/translations/de.ini
+++ b/translations/de.ini
@@ -8,6 +8,8 @@ video_codec = Video-Codec
 output_format = Ausgabeformat
 audio_device = Audiogerät
 volume = Lautstärke
+start_preview = Vorschau starten
+stop_preview = Vorschau stoppen
 start_recording = Aufnahme starten
 stop_recording = Aufnahme stoppen
 open_output_folder = Ausgabefolder öffnen
@@ -21,4 +23,6 @@ error_adjusted_area = Angepasste Breite oder Höhe ist null. Bitte wählen Sie e
 error_start_recording = Aufnahme konnte nicht gestartet werden: {error}
 warning_quit = Aufnahme läuft. Möchten Sie die Aufnahme stoppen und beenden?
 warning = Warnung
-version_info = Version 1.0.6\n\nMini Screen Recorder ist ein Open-Source\nBildschirm- und Audio-Recorder für Windows und Linux.\n\nUrsprünglicher Autor: Lextrack.\n\nDieses Projekt finden Sie auf GitHub, der Name\nlautet 'MiniScreenRecorder', und mein Spitzname\nist 'Lextrack'. Halten Sie dieses Projekt im Auge, weitere\nUpdates kommen bald!\n\nDiese Software wird ermöglicht durch\nFFmpeg und Flaticon.
+language_change = Änderung der Sprache
+warning_change_lang = Die Anwendung wird neu gestartet, um die neue Sprache anzuwenden.
+version_info = Version 1.0.7\n\nMini Screen Recorder ist ein Open-Source\nBildschirm- und Audio-Recorder für Windows und Linux.\n\nUrsprünglicher Autor: Lextrack.\n\nDieses Projekt finden Sie auf GitHub, der Name\nlautet 'MiniScreenRecorder', und mein Spitzname\nist 'Lextrack'. Halten Sie dieses Projekt im Auge, weitere\nUpdates kommen bald!\n\nDiese Software wird ermöglicht durch\nFFmpeg und Flaticon.
