--- a/translations/en.ini
+++ b/translations/en.ini
@@ -2,12 +2,14 @@
 Language = Language
 theme = Theme
 monitor = Monitor
-framerate = Framerate
+framerate = Frame rate
 bitrate = Bitrate
 video_codec = Video Codec
 output_format = Output Format
 audio_device = Audio Device
 volume = Volume
+start_preview = Start Preview
+stop_preview = Stop Preview
 start_recording = Start Recording
 stop_recording = Stop Recording
 open_output_folder = Open Output Folder
@@ -21,4 +23,6 @@ error_adjusted_area = Adjusted width or height is zero. Please select a valid ar
 error_start_recording = Failed to start recording: {error}
 warning_quit = Recording in progress. Do you want to stop recording and exit?
 warning = Warning
-version_info = Version 1.0.6\n\nMini Screen Recorder is an open-source\nscreen and audio recorder for Windows and Linux.\n\nOriginal author: Lextrack.\n\nYou can find this project on GitHub, its name\nis 'MiniScreenRecorder', and my nickname\nis 'Lextrack'. Keep an eye on this project, more\nare updates coming soon!\n\nThis software is made possible by\nFFmpeg and Flaticon.
+language_change = Language change
+warning_change_lang = The application will restart to apply the new language.
+version_info = Version 1.0.7\n\nMini Screen Recorder is an open-source\nscreen and audio recorder for Windows and Linux.\n\nOriginal author: Lextrack.\n\nYou can find this project on GitHub, its name\nis 'MiniScreenRecorder', and my nickname\nis 'Lextrack'. Keep an eye on this project, more\nare updates coming soon!\n\nThis software is made possible by\nFFmpeg and Flaticon.
