--- a/translations/es.ini
+++ b/translations/es.ini
@@ -2,12 +2,14 @@
 Language = Lenguaje
 theme = Tema
 monitor = Monitor
-framerate = FPS
+framerate = Fotogramas por segundo
 bitrate = Bitrate
 video_codec = Códec
 output_format = Formato de Video
 audio_device = Dispositivo de Audio
 volume = Volumen
+start_preview = Iniciar vista previa
+stop_preview = Detener vista Previa
 start_recording = Comenzar grabación
 stop_recording = Detener grabación
 open_output_folder = Abrir carpeta de salida
@@ -21,4 +23,6 @@ error_adjusted_area = El ancho o la altura ajustados es cero. Seleccione un áre
 error_start_recording = Error al comenzar la grabación: {error}
 warning_quit = Grabación en curso. ¿Desea detener la grabación y salir?
 warning = Advertencia
-version_info = Versión 1.0.6\n\nMini Screen Recorder es un grabador de pantalla\ny audio de código abierto para Windows y Linux.\n\nAutor original: Lextrack.\n\nPuedes encontrar este proyecto en GitHub, su nombre\nes 'MiniScreenRecorder', y mi apodo\nes 'Lextrack'. ¡Mantente atento a este proyecto,\nse avecinan más actualizaciones!\n\nEste software es posible gracias a\nFFmpeg y Flaticon.
+language_change = Cambio de idioma
+warning_change_lang = La aplicación se reiniciará para aplicar el nuevo idioma.
+version_info = Versión 1.0.7\n\nMini Screen Recorder es un grabador de pantalla\ny audio de código abierto para Windows y Linux.\n\nAutor original: Lextrack.\n\nPuedes encontrar este proyecto en GitHub, su nombre\nes 'MiniScreenRecorder', y mi apodo\nes 'Lextrack'. ¡Mantente atento a este proyecto,\nse avecinan más actualizaciones!\n\nEste software es posible gracias a\nFFmpeg y Flaticon.
