--- a/translations/fr.ini
+++ b/translations/fr.ini
@@ -2,12 +2,14 @@
 Language = Langue
 theme = Thème
 monitor = Moniteur
-framerate = FPS
-bitrate = Débit Video
-video_codec = Encodeur Vidéo
-output_format = Format d'enregistrement
+framerate = Fréquence d'images
+bitrate = Débit
+video_codec = Codec Vidéo
+output_format = Format de Sortie
 audio_device = Périphérique Audio
 volume = Volume
+start_preview = Commencer la Prévisualisation
+stop_preview = Arrêter la Prévisualisation
 start_recording = Commencer l'Enregistrement
 stop_recording = Arrêter l'Enregistrement
 open_output_folder = Ouvrir le Dossier de Sortie
@@ -17,8 +19,10 @@ status_ready = Statut : Prêt
 status_recording = Statut : Enregistrement
 error_no_audio_devices = Aucun périphérique audio trouvé.
 error_invalid_area = Zone sélectionnée invalide. Veuillez sélectionner une zone valide.
-error_adjusted_area = La largeur ou la hauteur ajustée est de zéro. Veuillez sélectionner une zone valide.
+error_adjusted_area = La largeur ou la hauteur ajustée est nulle. Veuillez sélectionner une zone valide.
 error_start_recording = Échec du démarrage de l'enregistrement : {error}
-warning_quit = Enregistrement en cours. Voulez-vous arrêter l'enregistrement et quitter?
+warning_quit = Enregistrement en cours. Voulez-vous arrêter l'enregistrement et quitter ?
 warning = Avertissement
-version_info = Version 1.0.6\n\nMini Screen Recorder est un enregistreur\nd'écran et audio open-source pour Windows et Linux.\n\nAuteur original : Lextrack.\n\nVous pouvez trouver ce projet sur GitHub, son nom\nest 'MiniScreenRecorder', et mon pseudonyme\nest 'Lextrack'. Suivez ce projet, plus\nde mises à jour arrivent bientôt !\n\nCe logiciel est rendu possible par\nFFmpeg et Flaticon.
+language_change = Changement de langue
+warning_change_lang = L'application redémarre pour appliquer la nouvelle langue.
+version_info = Version 1.0.7\n\nMini Screen Recorder est un enregistreur\nd'écran et audio open-source pour Windows et Linux.\n\nAuteur original : Lextrack.\n\nVous pouvez trouver ce projet sur GitHub, son nom\nest 'MiniScreenRecorder', et mon surnom\nest 'Lextrack'. Restez à l'écoute pour plus\nde mises à jour à venir bientôt!\n\nCe logiciel est rendu possible grâce à\nFFmpeg et Flaticon.
