--- a/translations/it.ini
+++ b/translations/it.ini
@@ -2,12 +2,14 @@
 Language = Lingua
 theme = Tema
 monitor = Monitor
-framerate = FPS
+framerate = Frequenza dei fotogrammi
 bitrate = Velocità in bit video
 video_codec = Codifica
 output_format = Formato di Output
 audio_device = Dispositivo Audio
 volume = Volume
+start_preview = Avvia anteprima
+stop_preview = Ferma anteprima
 start_recording = Inizia Registrazione
 stop_recording = Ferma Registrazione
 open_output_folder = Apri Cartella di Output
@@ -21,4 +23,6 @@ error_adjusted_area = La larghezza o l'altezza regolata è pari a zero. Si prega
 error_start_recording = Impossibile avviare la registrazione: {error}
 warning_quit = Registrazione in corso. Si desidera interrompere la registrazione e uscire?
 warning = Avvertenze
-version_info = Versione 1.0.6\n\nMini Screen Recorder è un registratore\ndi schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome\nè 'MiniScreenRecorder', e il mio nickname\nè 'Lextrack'. Tieni d'occhio questo progetto, ci\nsono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da\nFFmpeg e Flaticon.
+language_change = Cambiamento di lingua
+warning_change_lang = L'applicazione si riavvia per applicare la nuova lingua.
+version_info = Versione 1.0.7\n\nMini Screen Recorder è un registratore\ndi schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome\nè 'MiniScreenRecorder', e il mio nickname\nè 'Lextrack'. Tieni d'occhio questo progetto, ci\nsono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da\nFFmpeg e Flaticon.
