--- a/translations/pt.ini
+++ b/translations/pt.ini
@@ -8,6 +8,8 @@ video_codec = Codec de Vídeo
 output_format = Formato de Saída
 audio_device = Dispositivo de Áudio
 volume = Volume
+start_preview = Iniciar visualização
+stop_preview = Parar visualização
 start_recording = Iniciar Gravação
 stop_recording = Parar Gravação
 open_output_folder = Abrir Pasta de Saída
@@ -21,4 +23,6 @@ error_adjusted_area = Largura ou altura ajustada é zero. Por favor, selecione u
 error_start_recording = Falha ao iniciar a gravação: {error}
 warning_quit = Gravação em andamento. Deseja parar a gravação e sair?
 warning = Aviso
-version_info = Versão 1.0.6\n\nMini Screen Recorder é um gravador de tela e áudio\nopen-source para Windows e Linux.\n\nAutor original: Lextrack.\n\nVocê pode encontrar este projeto no GitHub, seu nome\né 'MiniScreenRecorder' e meu apelido é 'Lextrack'.\nFique de olho neste projeto, mais atualizações virão em breve!\n\nEste software é possível graças ao FFmpeg e ao Flaticon.
+language_change = Mudança de idioma
+warning_change_lang = O aplicativo será reiniciado para aplicar o novo idioma.
+version_info = Versão 1.0.7\n\nMini Screen Recorder é um gravador de tela e áudio\nopen-source para Windows e Linux.\n\nAutor original: Lextrack.\n\nVocê pode encontrar este projeto no GitHub, seu nome\né 'MiniScreenRecorder' e meu apelido é 'Lextrack'.\nFique de olho neste projeto, mais atualizações virão em breve!\n\nEste software é possível graças ao FFmpeg e ao Flaticon.
