Update ffmpeg, minor fixes

--- a/translations/ar.ini
+++ b/translations/ar.ini
@@ -17,6 +17,8 @@ select_recording_area = اختر منطقة التسجيل
 about = حول
 status_ready = الحالة: جاهز
 status_recording = الحالة: تسجيل
+error_recording = الحالة: حدث خطأ
+error_concat_video = حدث خطأ أثناء حفظ الفيديو.
 error_no_audio_devices = لم يتم العثور على أجهزة صوت.
 error_invalid_area = المنطقة المحددة غير صالحة. يرجى اختيار منطقة صالحة.
 error_adjusted_area = العرض أو الارتفاع المعدل هو صفر. يرجى اختيار منطقة صالحة.
@@ -25,4 +27,4 @@ warning_quit = التسجيل جارٍ. هل تريد إيقاف التسجيل 
 warning = تحذير
 language_change = تغيير اللغة
 warning_change_lang = سيتم إعادة تشغيل التطبيق لتطبيق اللغة الجديدة.
-version_info = النسخة 1.1.1 \n\nMini Screen Recorder هو مسجل شاشة وصوت مفتوح المصدر\nلنظامي Windows وLinux.\n\nالمؤلف الأصلي: Lextrack.\n\nيمكنك العثور على هذا المشروع على GitHub، اسمه\n'MiniScreenRecorder'، ولقبي\n'Lextrack'. تابع هذا المشروع، هناك المزيد\nمن التحديثات قريباً!\n\nهذا البرنامج ممكن بفضل\nFFmpeg وFlaticon.
+version_info = النسخة 1.1.2 \n\nMini Screen Recorder هو مسجل شاشة وصوت مفتوح المصدر\nلنظامي Windows وLinux.\n\nالمؤلف الأصلي: Lextrack.\n\nيمكنك العثور على هذا المشروع على GitHub، اسمه\n'MiniScreenRecorder'، ولقبي\n'Lextrack'. تابع هذا المشروع، هناك المزيد\nمن التحديثات قريباً!\n\nهذا البرنامج ممكن بفضل\nFFmpeg وFlaticon.
