--- a/translations/en-US.ini
+++ b/translations/en-US.ini
@@ -17,6 +17,8 @@ select_recording_area = Select Recording Area
 about = About
 status_ready = Status: Ready
 status_recording = Status: Recording
+error_recording = Status: An error has occurred
+error_concat_video = An error occurred while saving the video.
 error_no_audio_devices = No audio devices found.
 error_invalid_area = Invalid area selected. Please select a valid area.
 error_adjusted_area = Adjusted width or height is zero. Please select a valid area.
@@ -25,4 +27,4 @@ warning_quit = Recording in progress. Do you want to stop recording and exit?
 warning = Warning
 language_change = Language change
 warning_change_lang = The application will restart to apply the new language.
-version_info = Version 1.1.1\n\nMini Screen Recorder is an open-source\nscreen and audio recorder for Windows and Linux.\n\nOriginal author: Lextrack.\n\nYou can find this project on GitHub, its name\nis 'MiniScreenRecorder', and my nickname\nis 'Lextrack'. Keep an eye on this project, more\nare updates coming soon!\n\nThis software is made possible by\nFFmpeg and Flaticon.
+version_info = Version 1.1.2\n\nMini Screen Recorder is an open-source\nscreen and audio recorder for Windows and Linux.\n\nOriginal author: Lextrack.\n\nYou can find this project on GitHub, its name\nis 'MiniScreenRecorder', and my nickname\nis 'Lextrack'. Keep an eye on this project, more\nare updates coming soon!\n\nThis software is made possible by\nFFmpeg and Flaticon.
