--- a/translations/es-CL.ini
+++ b/translations/es-CL.ini
@@ -17,6 +17,8 @@ select_recording_area = Seleccionar área de grabación
 about = Acerca de
 status_ready = Estado: Listo
 status_recording = Estado: Grabando
+error_recording = Estado: Ha ocurrido un error
+error_concat_video = Se ha producido un error al guardar el vídeo.
 error_no_audio_devices = No se encontraron dispositivos de audio.
 error_invalid_area = Área seleccionada no válida. Seleccione un área válida.
 error_adjusted_area = El ancho o la altura ajustados es cero. Seleccione un área válida.
@@ -25,4 +27,4 @@ warning_quit = Grabación en curso. ¿Desea detener la grabación y salir?
 warning = Advertencia
 language_change = Cambio de idioma
 warning_change_lang = La aplicación se reiniciará para aplicar el nuevo idioma.
-version_info = Versión 1.1.1\n\nMini Screen Recorder es un grabador de pantalla\ny audio de código abierto para Windows y Linux.\n\nAutor original: Lextrack.\n\nPuedes encontrar este proyecto en GitHub, su nombre\nes 'MiniScreenRecorder', y mi apodo\nes 'Lextrack'. ¡Mantente atento a este proyecto,\nse avecinan más actualizaciones!\n\nEste software es posible gracias a\nFFmpeg y Flaticon.
+version_info = Versión 1.1.2\n\nMini Screen Recorder es un grabador de pantalla\ny audio de código abierto para Windows y Linux.\n\nAutor original: Lextrack.\n\nPuedes encontrar este proyecto en GitHub, su nombre\nes 'MiniScreenRecorder', y mi apodo\nes 'Lextrack'. ¡Mantente atento a este proyecto,\nse avecinan más actualizaciones!\n\nEste software es posible gracias a\nFFmpeg y Flaticon.
