--- a/translations/it-IT.ini
+++ b/translations/it-IT.ini
@@ -17,6 +17,8 @@ select_recording_area = Seleziona Area di Registrazione
 about = Informazioni
 status_ready = Stato: Pronto
 status_recording = Stato: Registrazione
+error_recording = Stato: Si è verificato un errore
+error_concat_video = Si è verificato un errore durante il salvataggio del video.
 error_no_audio_devices = Nessun dispositivo audio trovato.
 error_invalid_area = Area selezionata non valida. Si prega di selezionare un'area valida.
 error_adjusted_area = La larghezza o l'altezza regolata è pari a zero. Si prega di selezionare un'area valida.
@@ -25,4 +27,4 @@ warning_quit = Registrazione in corso. Si desidera interrompere la registrazione
 warning = Avvertenze
 language_change = Cambiamento di lingua
 warning_change_lang = L'applicazione si riavvia per applicare la nuova lingua.
-version_info = Versione 1.1.1\n\nMini Screen Recorder è un registratore\ndi schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome\nè 'MiniScreenRecorder', e il mio nickname\nè 'Lextrack'. Tieni d'occhio questo progetto, ci\nsono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da\nFFmpeg e Flaticon.
+version_info = Versione 1.1.2\n\nMini Screen Recorder è un registratore\ndi schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome\nè 'MiniScreenRecorder', e il mio nickname\nè 'Lextrack'. Tieni d'occhio questo progetto, ci\nsono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da\nFFmpeg e Flaticon.
