--- a/translations/pt-BR.ini
+++ b/translations/pt-BR.ini
@@ -17,6 +17,8 @@ select_recording_area = Selecionar Área de Gravação
 about = Sobre
 status_ready = Status: Pronto
 status_recording = Status: Gravando
+error_recording = Status: Ocorreu um erro
+error_concat_video = Ocorreu um erro ao salvar o vídeo.
 error_no_audio_devices = Nenhum dispositivo de áudio encontrado.
 error_invalid_area = Área inválida selecionada. Por favor, selecione uma área válida.
 error_adjusted_area = Largura ou altura ajustada é zero. Por favor, selecione uma área válida.
@@ -25,4 +27,4 @@ warning_quit = Gravação em andamento. Deseja parar a gravação e sair?
 warning = Aviso
 language_change = Mudança de idioma
 warning_change_lang = O aplicativo será reiniciado para aplicar o novo idioma.
-version_info = Versão 1.1.1\n\nMini Screen Recorder é um gravador de tela e áudio\nopen-source para Windows e Linux.\n\nAutor original: Lextrack.\n\nVocê pode encontrar este projeto no GitHub, seu nome\né 'MiniScreenRecorder' e meu apelido é 'Lextrack'.\nFique de olho neste projeto, mais atualizações virão em breve!\n\nEste software é possível graças ao FFmpeg e ao Flaticon.
+version_info = Versão 1.1.2\n\nMini Screen Recorder é um gravador de tela e áudio\nopen-source para Windows e Linux.\n\nAutor original: Lextrack.\n\nVocê pode encontrar este projeto no GitHub, seu nome\né 'MiniScreenRecorder' e meu apelido é 'Lextrack'.\nFique de olho neste projeto, mais atualizações virão em breve!\n\nEste software é possível graças ao FFmpeg e ao Flaticon.
