--- a/translations/tr-TR.ini
+++ b/translations/tr-TR.ini
@@ -17,6 +17,8 @@ select_recording_area = Kayıt Alanını Seç
 about = Hakkında
 status_ready = Durum: Hazır
 status_recording = Durum: Kayıt Yapılıyor
+error_recording = Durum: Bir hata oluştu
+error_concat_video = Videoyu kaydederken bir hata oluştu.
 error_no_audio_devices = Ses cihazı bulunamadı.
 error_invalid_area = Geçersiz alan seçildi. Lütfen geçerli bir alan seçin.
 error_adjusted_area = Ayarlanmış genişlik veya yükseklik sıfır. Lütfen geçerli bir alan seçin.
@@ -25,4 +27,4 @@ warning_quit = Kayıt devam ediyor. Kaydı durdurup çıkmak istiyor musunuz?
 warning = Uyarı
 language_change = Dil değişikliği
 warning_change_lang = Yeni dili uygulamak için uygulama yeniden başlatılacaktır.
-version_info = Sürüm 1.1.1\n\nMini Screen Recorder, Windows ve Linux için açık kaynaklı\nbir ekran ve ses kaydedicisidir.\n\nOrijinal yazar: Lextrack.\n\nBu projeyi GitHub'da bulabilirsiniz, adı\n'MiniScreenRecorder', ve takma adım\n'Lextrack'. Bu projeyi takip edin, daha fazla\ngüncelleme yakında geliyor!\n\nBu yazılım, FFmpeg ve Flaticon tarafından mümkün kılınmıştır.
+version_info = Sürüm 1.1.2\n\nMini Screen Recorder, Windows ve Linux için açık kaynaklı\nbir ekran ve ses kaydedicisidir.\n\nOrijinal yazar: Lextrack.\n\nBu projeyi GitHub'da bulabilirsiniz, adı\n'MiniScreenRecorder', ve takma adım\n'Lextrack'. Bu projeyi takip edin, daha fazla\ngüncelleme yakında geliyor!\n\nBu yazılım, FFmpeg ve Flaticon tarafından mümkün kılınmıştır.
