--- a/translations/vi-VN.ini
+++ b/translations/vi-VN.ini
@@ -17,6 +17,8 @@ select_recording_area = Chọn khu vực ghi âm
 about = Giới thiệu
 status_ready = Trạng thái: Sẵn sàng
 status_recording = Trạng thái: Đang ghi âm
+error_recording = Trạng thái: Đã xảy ra lỗi
+error_concat_video = Đã xảy ra lỗi trong khi lưu video.
 error_no_audio_devices = Không tìm thấy thiết bị âm thanh.
 error_invalid_area = Khu vực đã chọn không hợp lệ. Vui lòng chọn khu vực hợp lệ.
 error_adjusted_area = Chiều rộng hoặc chiều cao đã điều chỉnh bằng không. Vui lòng chọn khu vực hợp lệ.
@@ -25,4 +27,4 @@ warning_quit = Đang ghi âm. Bạn có muốn dừng ghi âm và thoát không?
 warning = Cảnh báo
 language_change = Thay đổi ngôn ngữ
 warning_change_lang = Ứng dụng sẽ khởi động lại để áp dụng ngôn ngữ mới.
-version_info = Phiên bản 1.1.1\n\nMini Screen Recorder là một công cụ mã nguồn mở\nđể ghi âm màn hình và âm thanh cho Windows và Linux.\n\nTác giả gốc: Lextrack.\n\nBạn có thể tìm thấy dự án này trên GitHub, tên của nó\nlà 'MiniScreenRecorder', và biệt danh của tôi\nlà 'Lextrack'. Hãy theo dõi dự án này, nhiều\ncập nhật sẽ đến sớm!\n\nPhần mềm này được thực hiện nhờ\nFFmpeg và Flaticon.
+version_info = Phiên bản 1.1.2\n\nMini Screen Recorder là một công cụ mã nguồn mở\nđể ghi âm màn hình và âm thanh cho Windows và Linux.\n\nTác giả gốc: Lextrack.\n\nBạn có thể tìm thấy dự án này trên GitHub, tên của nó\nlà 'MiniScreenRecorder', và biệt danh của tôi\nlà 'Lextrack'. Hãy theo dõi dự án này, nhiều\ncập nhật sẽ đến sớm!\n\nPhần mềm này được thực hiện nhờ\nFFmpeg và Flaticon.
