--- a/translations/de-DE.ini
+++ b/translations/de-DE.ini
@@ -17,6 +17,8 @@ select_recording_area = Aufnahmebereich auswählen
 about = Über
 status_ready = Status: Bereit
 status_recording = Status: Aufnahme
+error_recording = Status: Ein Fehler ist aufgetreten
+error_concat_video = Beim Speichern des Videos ist ein Fehler aufgetreten.
 error_no_audio_devices = Keine Audiogeräte gefunden.
 error_invalid_area = Ungültiger Bereich ausgewählt. Bitte wählen Sie einen gültigen Bereich aus.
 error_adjusted_area = Angepasste Breite oder Höhe ist null. Bitte wählen Sie einen gültigen Bereich aus.
@@ -25,4 +27,4 @@ warning_quit = Aufnahme läuft. Möchten Sie die Aufnahme stoppen und beenden?
 warning = Warnung
 language_change = Änderung der Sprache
 warning_change_lang = Die Anwendung wird neu gestartet, um die neue Sprache anzuwenden.
-version_info = Version 1.1.1\n\nMini Screen Recorder ist ein Open-Source\nBildschirm- und Audio-Recorder für Windows und Linux.\n\nUrsprünglicher Autor: Lextrack.\n\nDieses Projekt finden Sie auf GitHub, der Name\nlautet 'MiniScreenRecorder', und mein Spitzname\nist 'Lextrack'. Halten Sie dieses Projekt im Auge, weitere\nUpdates kommen bald!\n\nDiese Software wird ermöglicht durch\nFFmpeg und Flaticon.
+version_info = Version 1.1.2\n\nMini Screen Recorder ist ein Open-Source\nBildschirm- und Audio-Recorder für Windows und Linux.\n\nUrsprünglicher Autor: Lextrack.\n\nDieses Projekt finden Sie auf GitHub, der Name\nlautet 'MiniScreenRecorder', und mein Spitzname\nist 'Lextrack'. Halten Sie dieses Projekt im Auge, weitere\nUpdates kommen bald!\n\nDiese Software wird ermöglicht durch\nFFmpeg und Flaticon.
