--- a/translations/fil-PH.ini
+++ b/translations/fil-PH.ini
@@ -17,6 +17,8 @@ select_recording_area = Piliin ang Area ng Pagre-record
 about = Tungkol
 status_ready = Status: Handa
 status_recording = Status: Nagre-record
+error_recording = Status: Nagkaroon ng error
+error_concat_video = Nagkaroon ng error habang sinisave ang video.
 error_no_audio_devices = Walang natagpuang mga audio device.
 error_invalid_area = Hindi wastong lugar ang pinili. Pumili ng wastong lugar.
 error_adjusted_area = Ang na-adjust na lapad o taas ay zero. Pumili ng wastong lugar.
@@ -25,4 +27,4 @@ warning_quit = Nagre-record sa ngayon. Gusto mo bang itigil ang pagre-record at 
 warning = Babala
 language_change = Pagbabago ng Wika
 warning_change_lang = Magsisimula muli ang aplikasyon upang ilapat ang bagong wika.
-version_info = Bersyon 1.1.1\n\nAng Mini Screen Recorder ay isang open-source\nna screen at audio recorder para sa Windows at Linux.\n\nOrihinal na may-akda: Lextrack.\n\nMaaari mong hanapin ang proyektong ito sa GitHub, ang pangalan nito\nay 'MiniScreenRecorder', at ang palayaw ko\nay 'Lextrack'. Bantayan ang proyektong ito, marami pang\nupdate ang paparating!\n\nAng software na ito ay posible dahil sa\nFFmpeg at Flaticon.
+version_info = Bersyon 1.1.2\n\nAng Mini Screen Recorder ay isang open-source\nna screen at audio recorder para sa Windows at Linux.\n\nOrihinal na may-akda: Lextrack.\n\nMaaari mong hanapin ang proyektong ito sa GitHub, ang pangalan nito\nay 'MiniScreenRecorder', at ang palayaw ko\nay 'Lextrack'. Bantayan ang proyektong ito, marami pang\nupdate ang paparating!\n\nAng software na ito ay posible dahil sa\nFFmpeg at Flaticon.
