--- a/translations/fr-FR.ini
+++ b/translations/fr-FR.ini
@@ -17,6 +17,8 @@ select_recording_area = Sélectionner la Zone d'Enregistrement
 about = À Propos
 status_ready = Statut : Prêt
 status_recording = Statut : Enregistrement
+error_recording = Statut : Une erreur s'est produite
+error_concat_video = Une erreur est survenue lors de l'enregistrement de la vidéo.
 error_no_audio_devices = Aucun périphérique audio trouvé.
 error_invalid_area = Zone sélectionnée invalide. Veuillez sélectionner une zone valide.
 error_adjusted_area = La largeur ou la hauteur ajustée est nulle. Veuillez sélectionner une zone valide.
@@ -25,4 +27,4 @@ warning_quit = Enregistrement en cours. Voulez-vous arrêter l'enregistrement et
 warning = Avertissement
 language_change = Changement de langue
 warning_change_lang = L'application redémarre pour appliquer la nouvelle langue.
-version_info = Version 1.1.1\n\nMini Screen Recorder est un enregistreur\nd'écran et audio open-source pour Windows et Linux.\n\nAuteur original : Lextrack.\n\nVous pouvez trouver ce projet sur GitHub, son nom\nest 'MiniScreenRecorder', et mon surnom\nest 'Lextrack'. Restez à l'écoute pour plus\nde mises à jour à venir bientôt!\n\nCe logiciel est rendu possible grâce à\nFFmpeg et Flaticon.
+version_info = Version 1.1.2\n\nMini Screen Recorder est un enregistreur\nd'écran et audio open-source pour Windows et Linux.\n\nAuteur original : Lextrack.\n\nVous pouvez trouver ce projet sur GitHub, son nom\nest 'MiniScreenRecorder', et mon surnom\nest 'Lextrack'. Restez à l'écoute pour plus\nde mises à jour à venir bientôt!\n\nCe logiciel est rendu possible grâce à\nFFmpeg et Flaticon.
