--- a/translations/ja-JP.ini
+++ b/translations/ja-JP.ini
@@ -17,6 +17,8 @@ select_recording_area = 録画エリアを選択
 about = 情報
 status_ready = ステータス: 準備完了
 status_recording = ステータス: 録画中
+error_recording = 状態: エラーが発生しました
+error_concat_video = ビデオの保存中にエラーが発生しました。
 error_no_audio_devices = オーディオデバイスが見つかりません。
 error_invalid_area = 無効なエリアが選択されました。有効なエリアを選択してください。
 error_adjusted_area = 調整された幅または高さがゼロです。有効なエリアを選択してください。
@@ -25,4 +27,4 @@ warning_quit = 録画中です。録画を停止して終了しますか？
 warning = 警告
 language_change = 言語変更
 warning_change_lang = 新しい言語を適用するためにアプリケーションを再起動します。
-version_info = バージョン 1.1.1\n\nMini Screen Recorderは、WindowsおよびLinux用のオープ\nンソースのスクリーンおよびオーディオレコーダーです。\n\n原作者: Lextrack.\n\nこのプロジェクトはGitHubで見つけることができ、その名前は\n'MiniScreenRecorder'で、私のニックネームは'Lextrack'です。\n今後の更新にご期待ください！\n\nこのソフトウェアは、FFmpegとFlaticonのおかげで実現しました。
+version_info = バージョン 1.1.2\n\nMini Screen Recorderは、WindowsおよびLinux用のオープ\nンソースのスクリーンおよびオーディオレコーダーです。\n\n原作者: Lextrack.\n\nこのプロジェクトはGitHubで見つけることができ、その名前は\n'MiniScreenRecorder'で、私のニックネームは'Lextrack'です。\n今後の更新にご期待ください！\n\nこのソフトウェアは、FFmpegとFlaticonのおかげで実現しました。
