--- a/translations/pl-PL.ini
+++ b/translations/pl-PL.ini
@@ -17,6 +17,8 @@ select_recording_area = Wybierz obszar nagrywania
 about = Informacje
 status_ready = Status: Gotowy
 status_recording = Status: Nagrywanie
+error_recording = Status: Wystąpił błąd
+error_concat_video = Wystąpił błąd podczas zapisywania wideo.
 error_no_audio_devices = Nie znaleziono urządzeń audio.
 error_invalid_area = Wybrano nieprawidłowy obszar. Proszę wybrać prawidłowy obszar.
 error_adjusted_area = Dostosowana szerokość lub wysokość wynosi zero. Proszę wybrać prawidłowy obszar.
@@ -25,4 +27,4 @@ warning_quit = Nagrywanie w toku. Czy chcesz przerwać nagrywanie i wyjść?
 warning = Ostrzeżenie
 language_change = Zmiana języka
 warning_change_lang = Aplikacja zostanie ponownie uruchomiona, aby zastosować nowy język.
-version_info = Wersja 1.1.1\n\nMini Screen Recorder to open-source'owy\nprogram do nagrywania ekranu i dźwięku dla Windows i Linux.\n\nOryginalny autor: Lextrack.\n\nTen projekt można znaleźć na GitHubie, jego nazwa to\n'MiniScreenRecorder', a mój pseudonim to 'Lextrack'. Śledź ten projekt, wkrótce pojawią się kolejne aktualizacje!\n\nTo oprogramowanie jest możliwe dzięki\nFFmpeg i Flaticon.
+version_info = Wersja 1.1.2\n\nMini Screen Recorder to open-source'owy\nprogram do nagrywania ekranu i dźwięku dla Windows i Linux.\n\nOryginalny autor: Lextrack.\n\nTen projekt można znaleźć na GitHubie, jego nazwa to\n'MiniScreenRecorder', a mój pseudonim to 'Lextrack'. Śledź ten projekt, wkrótce pojawią się kolejne aktualizacje!\n\nTo oprogramowanie jest możliwe dzięki\nFFmpeg i Flaticon.
