--- a/translations/zh-Hans.ini
+++ b/translations/zh-Hans.ini
@@ -17,7 +17,9 @@ select_recording_area = 选择录制区域
 about = 关于
 status_ready = 状态：准备就绪
 status_recording = 状态：录制中
+error_recording = 状态：发生了一个错误
 error_no_audio_devices = 未找到音频设备。
+error_concat_video = 保存视频时发生错误。
 error_invalid_area = 选择的区域无效。请选择一个有效区域。
 error_adjusted_area = 调整后的宽度或高度为零。请选择一个有效区域。
 error_start_recording = 启动录制失败：{error}
@@ -25,4 +27,4 @@ warning_quit = 正在录音。您想停止录音并退出吗？
 warning = 警告
 language_change = 语言变化
 warning_change_lang = 应用程序将重新启动以应用新语言。
-version_info = 版本 1.1.1\n\nMini Screen Recorder 是一个开源的\n适用于 Windows 和 Linux 的屏幕和音频录制软件。\n\n原作者：Lextrack。\n\n你可以在 GitHub 上找到这个项目，名字是\n'MiniScreenRecorder'，我的昵称是\n'Lextrack'。请关注这个项目，更多更新即将推出！\n\n此软件得益于\nFFmpeg 和 Flaticon。
+version_info = 版本 1.1.2\n\nMini Screen Recorder 是一个开源的\n适用于 Windows 和 Linux 的屏幕和音频录制软件。\n\n原作者：Lextrack。\n\n你可以在 GitHub 上找到这个项目，名字是\n'MiniScreenRecorder'，我的昵称是\n'Lextrack'。请关注这个项目，更多更新即将推出！\n\n此软件得益于\nFFmpeg 和 Flaticon。
