--- a/translations/zh-Hant.ini
+++ b/translations/zh-Hant.ini
@@ -17,6 +17,8 @@ select_recording_area = 選擇錄製區域
 about = 關於
 status_ready = 狀態：準備就緒
 status_recording = 狀態：錄製中
+error_recording = 狀態：發生了一個錯誤
+error_concat_video = 保存影片時發生錯誤。
 error_no_audio_devices = 未找到音頻設備。
 error_invalid_area = 選擇的區域無效。請選擇有效區域。
 error_adjusted_area = 調整後的寬度或高度為零。請選擇有效區域。
@@ -25,4 +27,4 @@ warning_quit = 錄製中。你想停止錄製並退出嗎？
 warning = 警告
 language_change = 語言變更
 warning_change_lang = 應用新語言後，應用程序將重新啟動。
-version_info = 版本 1.1.1\n\nMini Screen Recorder 是一個開源\n的屏幕和音頻錄製器，適用於 Windows 和 Linux。\n\n原作者：Lextrack。\n\n你可以在 GitHub 上找到這個項目，\n它的名稱是 'MiniScreenRecorder'，我的暱稱\n是 'Lextrack'。請關注這個項目，更多\n更新即將推出！\n\n這款軟件得益於\nFFmpeg 和 Flaticon。
+version_info = 版本 1.1.2\n\nMini Screen Recorder 是一個開源\n的屏幕和音頻錄製器，適用於 Windows 和 Linux。\n\n原作者：Lextrack。\n\n你可以在 GitHub 上找到這個項目，\n它的名稱是 'MiniScreenRecorder'，我的暱稱\n是 'Lextrack'。請關注這個項目，更多\n更新即將推出！\n\n這款軟件得益於\nFFmpeg 和 Flaticon。
