--- a/translations/it-IT.ini
+++ b/translations/it-IT.ini
@@ -1,30 +1,30 @@
 [Settings]
-Language = Lingua
+Language = Lingua UI
 theme = Tema
 monitor = Monitor
-framerate = Frequenza dei fotogrammi
-bitrate = Velocità in bit video
-video_codec = Codifica
-output_format = Formato di Output
-audio_device = Dispositivo Audio
+framerate = Frequenza fotogrammi
+bitrate = Bitrate
+video_codec = Codec video
+output_format = Formato destinazione
+audio_device = Dispositivo audio
 volume = Volume
 start_preview = Avvia anteprima
-stop_preview = Ferma anteprima
-start_recording = Inizia Registrazione
-stop_recording = Ferma Registrazione
-open_output_folder = Apri Cartella di Output
-select_recording_area = Seleziona Area di Registrazione
-about = Informazioni
-status_ready = Stato: Pronto
-status_recording = Stato: Registrazione
-error_recording = Stato: Si è verificato un errore
+stop_preview = Stop anteprima
+start_recording = Avvia registrazione
+stop_recording = Stopa registrazione
+open_output_folder = Apri cartella destinazione
+select_recording_area = Seleziona area registrazione
+about = Info programma
+status_ready = Stato: pronto
+status_recording = Stato: registrazione
+error_recording = Stato: ai è verificato un errore
 error_concat_video = Si è verificato un errore durante il salvataggio del video.
-error_no_audio_devices = Nessun dispositivo audio trovato.
-error_invalid_area = Area selezionata non valida. Si prega di selezionare un'area valida.
-error_adjusted_area = La larghezza o l'altezza regolata è pari a zero. Si prega di selezionare un'area valida.
+error_no_audio_devices = Nessun dispositivo audio disponibile.
+error_invalid_area = Area selezionata non valida. Seleziona un'area valida.
+error_adjusted_area = La larghezza o l'altezza selezionata è pari a zero. Seleziona un'area valida.
 error_start_recording = Impossibile avviare la registrazione: {error}
-warning_quit = Registrazione in corso. Si desidera interrompere la registrazione e uscire?
+warning_quit = Registrazione in corso. Vuoi interrompere la registrazione e uscire?
 warning = Avvertenze
-language_change = Cambiamento di lingua
-warning_change_lang = L'applicazione si riavvia per applicare la nuova lingua.
-version_info = Versione 1.1.3\n\nMini Screen Recorder è un registratore\ndi schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome\nè 'MiniScreenRecorder', e il mio nickname\nè 'Lextrack'. Tieni d'occhio questo progetto, ci\nsono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da\nFFmpeg e Flaticon.
+language_change = Modifica lingua UI
+warning_change_lang = L'applicazione si riavvierà per caricare la nuova lingua UI.
+version_info = Versione 1.1.3\n\nMini Screen Recorder è un registratore di schermo e audio open-source per Windows e Linux.\n\nAutore originale: Lextrack.\n\nPuoi trovare questo progetto su GitHub, il suo nome è 'MiniScreenRecorder', e il mio nickname è 'Lextrack'.\n\nTieni d'occhio questo progetto, ci sono aggiornamenti in arrivo!\n\nQuesto software è reso possibile da FFmpeg e Flaticon.
